bpo-33199: Initialize ma_version_tag in PyDict_Copy (GH-6341) (cherry picked from commit d1c82c5cc7be0c21dddf86fd19c1702f6218459b)

Co-authored-by: INADA Naoki <methane@users.noreply.github.com>